--- a/YAML/userjava.yaml
+++ b/YAML/userjava.yaml
@@ -20,3 +20,12 @@ spec:
         #imagePullPolicy: Always 
         ports:
         - containerPort: 80
+        env:
+        - name: SQL_USER
+          value: "sqladminiDw6538"
+        - name: SQL_PASSWORD
+          value: "vGk2iCvr&J3w9uGk"
+        - name: SQL_SERVER
+          value: "sqlserveridw6538.database.windows.net"
+        - name: SQL_DBNAME
+          value: "mydrivingDB"
