--- a/YAML/tripviewer.yaml
+++ b/YAML/tripviewer.yaml
@@ -20,3 +20,24 @@ spec:
         #imagePullPolicy: Always 
         ports:
         - containerPort: 80
+        env:
+        - name: TRIPS_API_ENDPOINT
+          value: "http://trips-service:8080"
+        - name: USERPROFILE_API_ENDPOINT
+          value: "http://userprofile-service:8080"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tripviewer-service
+  labels:
+    app: tripviewer
+spec:
+  type: ClusterIP
+  ports:
+  - port: 8080
+    targetPort: 80
+    protocol: TCP
+    name: http
+  selector:
+    app: tripviewer
