--- a/YAML/userjava.yaml
+++ b/YAML/userjava.yaml
@@ -29,3 +29,19 @@ spec:
           value: "sqlserveridw6538.database.windows.net"
         - name: SQL_DBNAME
           value: "mydrivingDB"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: userjava-service
+  labels:
+    app: userjava
+spec:
+  type: ClusterIP
+  ports:
+  - port: 8080
+    targetPort: 80
+    protocol: TCP
+    name: http
+  selector:
+    app: userjava
