--- a/YAML/userjava.yaml
+++ b/YAML/userjava.yaml
@@ -21,14 +21,21 @@ spec:
         ports:
         - containerPort: 80
         env:
-        - name: SQL_USER
-          value: "sqladminiDw6538"
-        - name: SQL_PASSWORD
-          value: "vGk2iCvr&J3w9uGk"
         - name: SQL_SERVER
           value: "sqlserveridw6538.database.windows.net"
         - name: SQL_DBNAME
           value: "mydrivingDB"
+        - name: SQL_USER
+          valueFrom:
+            secretKeyRef:
+              name: mysecret
+              key: SQL_USER
+        - name: SQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysecret
+              key: SQL_PASSWORD
+        
 ---
 apiVersion: v1
 kind: Service
