--- a/YAML/secret.yaml
+++ b/YAML/secret.yaml
@@ -2,7 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysecret
+  namespace: api
 type: Opaque
 data:
   SQL_USER: c3FsYWRtaW5pRHc2NTM4Cg==
   SQL_PASSWORD: dkdrMmlDdnImSjN3OXVHawo=
+
