--- a/YAML/tripviewer.yaml
+++ b/YAML/tripviewer.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: tripviewer-deployment
+  namespace: web
   labels:
     app: tripviewer
 spec:
@@ -22,14 +23,15 @@ spec:
         - containerPort: 80
         env:
         - name: TRIPS_API_ENDPOINT
-          value: "http://trips-service:8080"
+          value: "http://trips-service.api:8080"
         - name: USERPROFILE_API_ENDPOINT
-          value: "http://userprofile-service:8080"
+          value: "http://userprofile-service.api:8080"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: tripviewer-service
+  namespace: web
   labels:
     app: tripviewer
 spec:
