--- a/YAML/trips.yaml
+++ b/YAML/trips.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: trips-deployment
+  namespace: api
   labels:
     app: trips
 spec:
@@ -33,6 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: trips-service
+  namespace: api
   labels:
     app: trips
 spec:
