--- a/YAML/userjava.yaml
+++ b/YAML/userjava.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userjava-deployment
+  namespace: api
   labels:
     app: userjava
 spec:
@@ -41,6 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: userjava-service
+  namespace: api
   labels:
     app: userjava
 spec:
