--- a/YAML/userprofiles.yaml
+++ b/YAML/userprofiles.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: userprofile-deployment
+  namespace: api
   labels:
     app: userprofile
 spec:
@@ -33,6 +34,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: userprofile-service
+  namespace: api
   labels:
     app: userprofile
 spec:
