--- a/YAML/tripviewer.yaml
+++ b/YAML/tripviewer.yaml
@@ -43,3 +43,45 @@ spec:
     name: http
   selector:
     app: tripviewer
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: tripviewer-ingress
+  namespace: web
+
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+spec:
+  rules:
+  - host: 4cc0c5dafc854b8785bc.eastasia.aksapp.io
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service: 
+            name: tripviewer-service
+            port: 
+              number: 80
+      - path: /metrics
+        pathType: Prefix
+        backend:
+          service: 
+            name: tripviewer-service
+            port: 
+              number: 80
+      - path: /Trip
+        pathType: Prefix
+        backend:
+          service: 
+            name: tripviewer-service
+            port: 
+              number: 80
+      - path: /UserProfile
+        pathType: Prefix
+        backend:
+          service: 
+            name: tripviewer-service
+            port: 
+              number: 80
