--- a/YAML/tripinsights.yaml
+++ b/YAML/tripinsights.yaml
@@ -18,7 +18,6 @@ spec:
       containers:
       - name: poi
         image: registryidw6538.azurecr.io/tripinsights/poi:1.0
-        #imagePullPolicy: Always 
         ports:
         - containerPort: 80
         env:
@@ -26,9 +25,30 @@ spec:
           value: "sqlserveridw6538.database.windows.net"
         - name: SQL_DBNAME
           value: "mydrivingDB"
-        envFrom:
-        - secretRef:
-            name: mysecret
+        #envFrom:
+        #- secretRef:
+        #    name: mysecret
+        - name: SQL_USER
+          valueFrom:
+            secretKeyRef:
+              name: azure-kvname-workload-identity
+              key: SQLUSER
+        - name: SQL_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: azure-kvname-workload-identity
+              key: SQLPASSWORD
+        volumeMounts:
+        - name: secrets-store01-inline
+          mountPath: "/secrets"
+          readOnly: true
+      volumes:
+        - name: secrets-store01-inline
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: azure-kvname-workload-identity 
 ---
 apiVersion: v1
 kind: Service
@@ -46,3 +66,45 @@ spec:
     name: http
   selector:
     app: poi
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: poi-ingress
+  namespace: api
+
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+spec:
+  rules:
+  - host: 4cc0c5dafc854b8785bc.eastasia.aksapp.io
+    http:
+      paths:
+      - path: /api/poi
+        pathType: Prefix
+        backend:
+          service: 
+            name: poi-service
+            port: 
+              number: 80
+      - path: /api/docs
+        pathType: Prefix
+        backend:
+          service: 
+            name: poi-service
+            port: 
+              number: 80
+      - path: /swagger/docs/poi
+        pathType: Prefix
+        backend:
+          service: 
+            name: poi-service
+            port: 
+              number: 80
+      - path: /metrics
+        pathType: Prefix
+        backend:
+          service: 
+            name: poi-service
+            port: 
+              number: 80
